# Kuechenplaner

./: .gitignore  ANALYSE.md  BUILD.md  CLAUDE.md  CODE_REVIEW.md  DATABASE_UPDATE_REQUIRED.md  README.md  TECHNICAL_README.md  USER_STORIES.md  alembic.ini  build.bat  build.py  build.sh  build_logging.py  build_windows_standalone.py  debug_edit_page.py  excel_import.py  generate_icon.py  installer.iss  offene-fragen-und-anmerkungen.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run_build_standalone.bat  update_version.py
OLD_Templates/: dashboard.html
UserStorys/: README.md  story-01-individuelle-personenanzahl.md  story-02-kompaktere-einkaufsliste.md  story-03-tageweise-rezept-pdf.md  story-04-rezept-vorschau.md  story-05-reste-tracker.md  story-06-reste-seite-ui-angleichen.md  story-07-reste-erfassen-upsert.md  story-08-reste-statistik-rezept-detail.md  story-09-bemerkungsfeld-einkaufsliste.md  story-10-rezept-box-hover-reveal.md  story-11-gang-bei-allen-mahlzeiten.md  story-12-popups-personenanzahl-gang.md  story-13-zubereitung-als-textblock.md  story-14-einheiten-umrechnung-pdf.md  story-15-rezepte-sortierung-a-z.md  story-16-ui-texte-umlaute.md  story-17-reste-seite-header-reduzieren.md  story-18-statistik-button-fab.md  story-19-reste-loeschen-bug.md  story-20-tageslisten-gang-hierarchie.md  story-21-hover-buttons-overlap.md  story-22-speiseplan-pdf-gang-servings.md  story-23-copyright-2026.md  story-24-settings-infos-tab.md  story-25-filter-flash-x-cloak.md  story-26-einkaufsliste-aggregation.md  story-27-backup-download-feedback.md  story-28-backup-restore-reset.md  story-29-version-im-nuitka-build-installer.md  story-30-zutatenkategorien-manuell.md  story-31-benutzerdefinierte-einheiten-konvertierungen.md  story-32-update-hinweis-bei-neuer-version.md  story-33-allergene-in-einstellungen-verwalten.md  story-34-rezeptliste-name-tags-allergene-zweizeilig.md  story-35-allergene-strukturiert-im-rezeptformular.md  story-36-speiseplan-livesearch-tags.md  story-37-speiseplan-tabelle-getrennt-scrollbar.md  story-38-tags-allergene-in-export-tagesliste-rezeptbuch.md  story-39-zutaten-kategorie-im-rezeptformular-bearbeiten.md
alembic/: env.py
app/: constants.py  crud.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py  seeders.py
data/: app.db
docs/: DESIGN_SYSTEM.md
tests/: conftest.py  test_backup_download.py  test_backup_reset.py  test_backup_restore.py  test_crud_camp.py  test_health.py  (+15 more)
(+63 files in other folders)
